--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image left"><img src="images/intro/IMG_2570_Original.JPG" alt=""/></span>
-								<p>I'm now a graudate student studying <b>Information Systems and Computer Software</b> Engineering at Northeastern University.</p>
+								<p>I'm now a graudate student studying <b>Information Systems and Computer Software Engineering</b> at Northeastern University.</p>
 								<p>I have some experience in both front-end and back-end development, and usually I'll start my day with some LeetCode questions
 									 to enrich my knowledge of algorithms and data structures. </p>
 									 <br/>
-								<p>Before attending the graudate school at Northeastern, I was working as a software engineer at an IT and education company in Shanghai, China.</p>
+								<p>Before attending the graudate school at Northeastern, I was working as a software engineer intern at an IT and education company in Shanghai, China.</p>
 								<p>I will graduate from Northeastern University in <b>May 2021</b>, so now I'm seeking software engineer internship 
 									and also open to full time opportunities to enter the IT industry again.</p>
 							</article>
