--- a/index.html
+++ b/index.html
@@ -203,6 +203,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script type="text/javascript" src="//counter.websiteout.net/js/36/0/0/0"></script>
 	</body>
 </html>
