--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+					<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/777760/t/1"></script>
+					<script type="text/javascript" src="//counter.websiteout.net/js/36/0/0/0"></script>
 					</footer>
 
 			</div>
@@ -203,6 +204,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript" src="//counter.websiteout.net/js/36/0/0/0"></script>
 	</body>
 </html>
