--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
 
 						<!-- Project -->
 							<article id="work">
+								<h2 class="major">Boonoob Social Network</h2>
+								<span class="image main"><img src="images/boonoob/landing.png" alt="" /></span>
+								<span class="image main"><img src="images/boonoob/homepage.png" alt="" /></span>
+								<p>A real-world social network based on activities built during my internship to connect people, spread happiness and boost the gig economy.</p>
+								<p>My Job: Worked as a full stack engineer, responsible for both the front end and the back end of the web app.
+									<br/>
+									1. Created Welcome Page, Login Page, SignUp Page and Home Page according to UI/UX design using <b>React.JS, HTML, CSS</b>
+									<br/>
+									2. Implemented front-end logic and functions of user flow(Sign Up, Login, Remember Login, Render Content, Connect, Create Content, Like, Comment, Upload Pictures, Report) using <b>React.JS</b> 
+									<br/>
+									3. Developed the REST APIs(Retrieve Posts, Create Posts, Friend Request, Like, Comment, Report) and back-end services(Notification, Connection Policy, Verification) to smooth user flow using <b>Node.JS(Express.JS)</b> 
+									<br/>
+									4. Worked with <b>MongoDB, MongoDB Atlas</b> for data modeling, storing and management
+									<br/>
+									5. Used <b>GitLab</b> for version control, became proficient in using Git to manage the workflow
+									<br/>
+									6. Got to know the process of Agile Software Development, felt comfortable to work in a fast-paced startup, and had smooth communication with my supervisor and colleagues to ensure the delivery of every task
+								</p>
+								<p>The code is privately owned by Boonoob. Boonoob Social Network will be launched soon.</p>
+								<br/>
+
 								<h2 class="major">Bookcase Full Stack Web App</h2>
 								<span class="image main"><img src="images/bookcasenodejs/afteradding.png" alt="" /></span>
 								<span class="image main"><img src="images/bookcasenodejs/querying.png" alt="" /></span>
