--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Projects</a></li>
 								<li><a href="#skills">Skills</a></li>
-								<li><a href="/files/SiweiGuo-Resume.pdf" download>Resume</a></li>
+								<li><a href="/files/SiweiGuo_Resume.pdf" download>Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -91,13 +91,13 @@
 								<br/>
 								<br/>
 
-								<h2 class="major">Todo Full Stack Web App</h2>
+								<h2 class="major">Remember</h2>
 								<span class="image main"><img src="images/todo_fullstack/before_login.png" alt="" /></span>
 								<span class="image main"><img src="images/todo_fullstack/add_todo2.png" alt="" /></span>
 								<p>A web application for users to take notes and create their todo lists.</p>
 								<p>Todo web application was implemented with <b>Java</b> and <b>Spring Boot</b> for the back end and <b>React.JS</b> for the front end 
 									and <b>H2</b> for the database. <b>Basic Auth</b> and <b>JSON Web Token(JWT)</b> was used to implement user login functionality.</p>
-								<a href="https://github.com/EdisonCat/TodoApp" class="button" target="_blank">Github Repo & More</a>
+								<a href="https://github.com/EdisonCat/Remember" class="button" target="_blank">Github Repo & More</a>
 								<br/>
 								<br/>
 								
