--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<p>I'm glad that I live in an era when technologies are updating and iterating very fast
-									so that I can keep learning new things to improve my ability of software development. </p>
+									so that I can keep learning new things to improve and strengthen my knowledge and skills of software development. </p>
 								<h4>Programming Languages</h4>
-								<p>Java, C/C++, JavaScript, Python</p>
+								<p>Java, JavaScript, TypeScript, C/C++, Python</p>
 								<h4>Back End</h4>
 								<p>Spring Boot, Node.JS, Express.JS, Django, Apache Tomcat</p>
 								<h4>Front End</h4>
-								<p>React.JS, HTML, CSS, Bootstrap</p>
+								<p>React.JS, HTML, CSS, Bootstrap, Redux</p>
 								<h4>Database</h4>
 								<p>AWS DynamoDB, MySQL, MongoDB, MongoDB Atlas, PostgreSQL, Redis, SQLite, H2</p>
 								<h4>Cloud Computing</h4>
 								<p>AWS Elastic Beanstalk, AWS EC2, AWS Lambda, AWS Step Functions</p>
 								<h4>Tools</h4>
-								<p>Docker, Maven, Git, Pandas, JSON, GraphQL</p>
+								<p>Docker, Maven, Git, Pandas, JSON, GraphQL, Vim</p>
 							</article>
 
 							<article id="resume">
