--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
 								<p>The code is privately owned by Boonoob. Boonoob Social Network will be launched soon.</p>
 								<br/>
 
+								<h2 class="major">Sorting Algorithms Visualizer</h2>
+								<span class="image main"><img src="images/sortingalgorithmsvisualizer/sorting.mov" alt="" /></span>
+								<p>A visualizer for sorting algorithms to visualize the process of sorting of 6 different sorting algorithms, including Bubble Sort, 
+									Insertion Sort, Selection Sort, Quick Sort, Heap Sort and Merge Sort.</p>
+								<p>Sorting Algorithms Visualizer was implemented with <b>React.JS</b></p>
+								<a href="https://github.com/EdisonCat/SortingAlgorithmVisualizer" class="button" target="_blank">Github Repo & More</a>
+								<br/>
+								<br/>
+
 								<h2 class="major">Bookcase Full Stack Web App</h2>
 								<span class="image main"><img src="images/bookcasenodejs/afteradding.png" alt="" /></span>
 								<span class="image main"><img src="images/bookcasenodejs/querying.png" alt="" /></span>
