--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<br/>
 
 								<h2 class="major">Sorting Algorithms Visualizer</h2>
-								<span class="image main"><img src="images/sortingalgorithmsvisualizer/sorting.mov" alt="" /></span>
+								<span class="image main"><video width="750px" controls autoplay><source src="./images/sortingalgorithmsvisualizer/sorting.mov" type="video/mp4"></video></span>
 								<p>A visualizer for sorting algorithms to visualize the process of sorting of 6 different sorting algorithms, including Bubble Sort, 
 									Insertion Sort, Selection Sort, Quick Sort, Heap Sort and Merge Sort.</p>
 								<p>Sorting Algorithms Visualizer was implemented with <b>React.JS</b></p>
